--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(laborator_6 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Programare-Procedurala-Laborator-6 Problem-1.c Problem-2.c)
+add_executable(Programare-Procedurala-Laborator-6 Problem-1.c Problem-2.c Problem-3.c Problem-4.c)
